--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Metal&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <nav id="navbar">
-            <ul>
-                <li><a href="#">About</a> </li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <header class="header">
+           <nav id="navbar">
+               <ul class="nav-ul">
+                   <li><a href="#">About</a> </li>
+                   <li><a href="#">Work</a></li>
+                   <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>    
+
 
         <section id="welcome-section">
-           <h1 class="heading-1">
-               Hey, I am Meldy 
+           <h1 class="heading">
+               <div class="heading__1">
+                  Hey, I am Meldy
+               </div>
+               <div class="heading__2">
+                a smart web developer
+               </div>
            </h1>
-           <h3 class="heading-2">
-               a smart web developer
-           </h3>
+           
         </section>
 
         <section id="projects">
@@ -48,7 +56,7 @@
           <nav>
               <ul>
                   <li><a href="#"><i class="fab fa-facebook-square"></i> Facebook</a></li>
-                  <li><a href="#"><i class="fab fa-github-square"></i> GitHub</a></li>
+                  <li><a id="profile-link" href="#" target="_blank"><i class="fab fa-github-square"></i> GitHub</a></li>
                   <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
                   <li><a href="#"><i class="fas fa-at"></i> Send a mail</a></li>
                   <li><a href="#"><i class="fas fa-mobile-alt"></i> Call me</a></li>
