--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="welcome-section">
            <h1 class="heading">
                <div class="heading__1">
-                  Hey, I am Meldy
+                  Hey, I'm Meldy
                </div>
                <div class="heading__2">
                 a smart web developer
