add section 2 header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Metal&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -33,14 +33,21 @@
                 a smart web developer
                </div>
            </h1>
-           
         </section>
 
         <section id="projects">
             <div class="project-tile">
                 <h1 class="heading-3">These are some of my projects </h1>
-                <div class="tile-container">
-                     <div>image1</div>
+                <div class="row">
+                     <figure class="column"><img src="./img/img 1.jpg" alt="image1" style="width: 100%">
+                     <figcaption class="caption">Tribute page</figcaption>
+                     </figure>
+                     <figure class="column"><img src="./img/img 2.png" alt="image2" style="width: 100%">
+                     <figcaption class="caption">Random Quote Machine</figcaption></figure>
+                     <figure class="column"><img src="./img/img 3.png" alt="image3" style="width: 100%"> <figcaption class="caption">JavaScript Calculator</figcaption></figure>
+                     <figure class="column"><img src="./img/img 4.jpg" alt="image4" style="width: 100%"><figcaption class="caption">Mao Data Across the Globe</figcaption></figure>
+                     <figure class="column"><img src="./img/img 5.png" alt="image5" style="width: 100%"><figcaption class="caption">Wikipedia Viewer</figcaption></figure>
+                     <figure class="column"><img src="./img/img 6.png" alt="image6" style="width: 100%"><figcaption class="caption">Tic Tac Toe Game</figcaption></figure> 
                 </div>
                 <a href="#">Show all  <i class="fas fa-chevron-right"></i></a>
             </div>    
