--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         
 
         <section id="contact-section">
-            <h1 class="heading-1">
-                Let's work together...
+            <h1 class="heading">
+                <div class="heading__1">
+                   Let's work together...
+                </div>
+                <div class="heading__2">
+                 How do you take your coffee?
+                </div>
             </h1>
-            <h3 class="heading-4">
-                How do you take your coffee?
-            </h3>
           <nav>
               <ul>
                   <li><a href="#"><i class="fab fa-facebook-square"></i> Facebook</a></li>
@@ -70,14 +72,15 @@
                   <li><a href="#"><i class="fas fa-mobile-alt"></i> Call me</a></li>
               </ul>
           </nav>
-          <span>
+          <br> <br> <br> <br> <br> <br> <hr>
+          <span class="">
             **This is just a fake portfolio. All the projects and contact details given are not real.
           </span>  
-          <span>
+          <span class="">
             &copy;Created for freeCodeCamp training
         </span>
          </section>
-         
+
     </main>
 </body>
 </html>
