connect sections to links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <header class="header">
            <nav id="navbar">
                <ul class="nav-ul">
-                   <li><a href="#">About</a> </li>
-                   <li><a href="#">Work</a></li>
-                   <li><a href="#">Contact</a></li>
+                   <li><a href="#welcome-section">About</a> </li>
+                   <li><a href="#projects">Work</a></li>
+                   <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>    
@@ -55,32 +55,27 @@
         
 
         <section id="contact-section">
-            <h1 class="heading">
+            <h1 class="heading heading-5">
                 <div class="heading__1">
                    Let's work together...
                 </div>
                 <div class="heading__2">
-                 How do you take your coffee?
+                 How would you like to contact me?
                 </div>
             </h1>
           <nav>
               <ul>
-                  <li><a href="#"><i class="fab fa-facebook-square"></i> Facebook</a></li>
-                  <li><a id="profile-link" href="#" target="_blank"><i class="fab fa-github-square"></i> GitHub</a></li>
+                  <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
+                  <li><a id="profile-link" href="https://github.com/Meldy2503/portifolio-display.git" target="_blank"><i class="fab fa-github-square"></i> GitHub</a></li>
                   <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
                   <li><a href="#"><i class="fas fa-at"></i> Send a mail</a></li>
                   <li><a href="#"><i class="fas fa-mobile-alt"></i> Call me</a></li>
               </ul>
-          </nav>
-          <br> <br> <br> <br> <br> <br> <hr>
-          <span class="">
-            **This is just a fake portfolio. All the projects and contact details given are not real.
-          </span>  
-          <span class="">
-            &copy;Created for freeCodeCamp training
-        </span>
-         </section>
-
+          </nav>  
+    
+          <span class="footer-text">
+            <p>**This is just a fake portfolio. All the projects and contact details given are not real. </p> <p>&copy;Created as part of my css training project</p> </span>
+          </section>
     </main>
 </body>
 </html>
